# bookstore

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requeriments.txt
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
bookstore/templates/: hello_world.html
order/: factories.py  urls.py
order/models/: __init__.py
order/serializers/: __init__.py  order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/tests/views/: test_post.py
order/viewsets/: __init__.py  order_viewset.py
product/: factories.py  urls.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
