[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Thiago Brito <deoliveira.tbrito@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
djangorestframework = "^3.14.0"
django-extensions = "^3.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
factory-boy = "^3.3.0"
djangorestframework = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
